Variety - File Format: Add Parquet and ORC

--- a/variety/notebook/file-format.ipynb
+++ b/variety/notebook/file-format.ipynb
@@ -187,7 +187,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://506c3c60aaee:4040\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://d91bcaab3673:4040\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -330,7 +330,7 @@
    "outputs": [],
    "source": [
     "with open(ext4_text_file_path_filename, \"rb\") as f:\n",
-    "    image_pkl_new = f.read()"
+    "    image_pkl_text_file_new = f.read()"
    ]
   },
   {
@@ -357,7 +357,7 @@
     }
    ],
    "source": [
-    "image_pkl == image_pkl_new"
+    "image_pkl_text_file_new == image_pkl"
    ]
   },
   {
@@ -557,9 +557,9 @@
     }
    ],
    "source": [
-    "images_pkl_new = images_rdd_new.take(3)\n",
-    "for image_pkl_new in images_pkl_new:\n",
-    "    print(image_pkl == image_pkl_new)"
+    "images_pkl_rdd_new = images_rdd_new.take(3)\n",
+    "for image_pkl_rdd_new in images_pkl_rdd_new:\n",
+    "    print(image_pkl_rdd_new == image_pkl)"
    ]
   },
   {
@@ -715,7 +715,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "images_dict_df_new = spark.read.json(hdfs_jsonl_path_filename)"
+    "images_dict_df_jsonl_new = spark.read.json(hdfs_jsonl_path_filename)"
    ]
   },
   {
@@ -735,7 +735,7 @@
     }
    ],
    "source": [
-    "images_dict_df_new"
+    "images_dict_df_jsonl_new"
    ]
   },
   {
@@ -759,7 +759,7 @@
     }
    ],
    "source": [
-    "images_dict_df_new.show()"
+    "images_dict_df_jsonl_new.show()"
    ]
   },
   {
@@ -785,8 +785,377 @@
     }
    ],
    "source": [
-    "for a in images_dict_df_new.toLocalIterator():\n",
-    "    print(a.fn==\"image.png\", base64.b64decode(a.esp.encode('UTF-8'))==image_pkl)"
+    "for image_dict_row in images_dict_df_jsonl_new.toLocalIterator():\n",
+    "    print(image_dict_row.fn==\"image.png\", \\\n",
+    "          base64.b64decode(image_dict_row.esp.encode('UTF-8'))==image_pkl)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## HDFS - Parquet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can use the same images DataFrame as before."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[esp: string, fn: string]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "images_dict_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+---------+\n",
+      "|                 esp|       fn|\n",
+      "+--------------------+---------+\n",
+      "|gANjbnVtcHkuY29yZ...|image.png|\n",
+      "|gANjbnVtcHkuY29yZ...|image.png|\n",
+      "|gANjbnVtcHkuY29yZ...|image.png|\n",
+      "+--------------------+---------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "images_dict_df.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Write"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hdfs_parquet_path_filename = \\\n",
+    "    '/home/jovyan/work/' + \\\n",
+    "    'file_format/hdfs_parquet.paquet'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note: Don't forget to delete existing files. For default, HDFS will not overwrite them, instead, it will throw following error message.\n",
+    "```\n",
+    "Py4JJavaError: An error occurred while calling o154.save.\n",
+    ": org.apache.spark.sql.AnalysisException: path file:/home/jovyan/work/file_format/hdfs_parquet.paquet already exists.;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images_dict_df.write.save(hdfs_parquet_path_filename, format=\"parquet\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Read"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images_dict_df_parquet_new = spark.read.parquet(hdfs_parquet_path_filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[esp: string, fn: string]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "images_dict_df_parquet_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+---------+\n",
+      "|                 esp|       fn|\n",
+      "+--------------------+---------+\n",
+      "|gANjbnVtcHkuY29yZ...|image.png|\n",
+      "|gANjbnVtcHkuY29yZ...|image.png|\n",
+      "|gANjbnVtcHkuY29yZ...|image.png|\n",
+      "+--------------------+---------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "images_dict_df_parquet_new.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Following has to be all Trues!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True True\n",
+      "True True\n",
+      "True True\n"
+     ]
+    }
+   ],
+   "source": [
+    "for image_dict_row in images_dict_df_parquet_new.toLocalIterator():\n",
+    "    print(image_dict_row.fn==\"image.png\", \\\n",
+    "          base64.b64decode(image_dict_row.esp.encode('UTF-8'))==image_pkl)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## HDFS - ORC"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can use the same images DataFrame as before."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[esp: string, fn: string]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "images_dict_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+---------+\n",
+      "|                 esp|       fn|\n",
+      "+--------------------+---------+\n",
+      "|gANjbnVtcHkuY29yZ...|image.png|\n",
+      "|gANjbnVtcHkuY29yZ...|image.png|\n",
+      "|gANjbnVtcHkuY29yZ...|image.png|\n",
+      "+--------------------+---------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "images_dict_df.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Write"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hdfs_orc_path_filename = \\\n",
+    "    '/home/jovyan/work/' + \\\n",
+    "    'file_format/hdfs_orc.orc'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note: Don't forget to delete existing files. For default, HDFS will not overwrite them, instead, it will throw following error message.\n",
+    "```\n",
+    "Py4JJavaError: An error occurred while calling o154.save.\n",
+    ": org.apache.spark.sql.AnalysisException: path file:/home/jovyan/work/file_format/hdfs_parquet.paquet already exists.;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images_dict_df.write.save(hdfs_orc_path_filename, format=\"orc\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Read"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images_dict_df_orc_new = spark.read.orc(hdfs_orc_path_filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[esp: string, fn: string]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "images_dict_df_orc_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+---------+\n",
+      "|                 esp|       fn|\n",
+      "+--------------------+---------+\n",
+      "|gANjbnVtcHkuY29yZ...|image.png|\n",
+      "|gANjbnVtcHkuY29yZ...|image.png|\n",
+      "|gANjbnVtcHkuY29yZ...|image.png|\n",
+      "+--------------------+---------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "images_dict_df_orc_new.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Following has to be all Trues!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True True\n",
+      "True True\n",
+      "True True\n"
+     ]
+    }
+   ],
+   "source": [
+    "for image_dict_row in images_dict_df_orc_new.toLocalIterator():\n",
+    "    print(image_dict_row.fn==\"image.png\", \\\n",
+    "          base64.b64decode(image_dict_row.esp.encode('UTF-8'))==image_pkl)"
    ]
   }
  ],
